# hal-backend

./: .replit  main.py  pyproject.toml  requirements.txt
attached_assets/: Pasted-Got-it-Here-s-your-ready-to-paste-env-content-using-your-real-keys-Paste-this-in-your-env-fi-1745284767840.txt
