[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "elevenlabs==1.57.0",
    "flask==3.1.0",
    "flask-cors==5.0.1",
    "openai==1.75.0",
    "python-dotenv==1.1.0",
    "requests>=2.32.3",
    "soundfile==0.13.1",
]
